# ROS2-sw_urdf_GAZEBO

./: CMakeLists.txt  README.md  package.xml
config/: display_robot_mode.rviz
launch/: display_robot.launch.py  gazebo_sim_launch.py  robot.launch.py  wpb_simple_gazebo_launch.py
meshes/: base_link.STL  left_driving_Link.STL  left_front_Link.STL  passive_wheel_0_Link.STL  passive_wheel_1_Link.STL  passive_wheel_2_Link.STL  radar_Link.STL  rear_Link.STL  right_driving_Link.STL  right_front_Link.STL
robot模型/: DEC2_15_3.stp.SLDPRT  Robot.SLDASM  T1.stp  T1M1-FC_10_3.stp.SLDPRT  T1M1-MC_5_3.stp.SLDPRT  T1M1-SCREW_24_3.stp.SLDPRT  T1M1-SEALRING_6_3.stp.SLDPRT  T1M1-SHELL_56_2_72_3.stp.SLDPRT  主动轮.SLDPRT  主机框架.SLDPRT  从动轮.SLDPRT  从动轮支撑.SLDPRT  支撑杠.SLDPRT
src/: publisher_member_function.cpp  subscriber_member_function.cpp
urdf/: Robot.urdf  first_robot.urdf  first_robot.xacro  move_cpp.csv  move_cpp.urdf
urdf/robot/: robot.xacro
urdf/robot/actuator/: driving_wheel.xacro  passive_wheel.xacro
urdf/robot/frame/: base.xacro  up.xacro
urdf/robot/sensor/: camera.xacro  radar.xacro
world/: room.world
world/room/: model.sdf
