<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="star@todo.todo">star</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_plugin_path="lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
    <gazebo_ros gazebo_media_path="${prefix}/world:${prefix}/meshes"/> -->
  </export>
</package>
